削除をフラグで管理するように変更